# proteomics-toolkit

./: .gitattributes  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  lint.yml  publish.yml
docs/: 01-overview.md  02-data-import.md  03-metadata.md  04-qc-plots.md  05-normalization.md  06-statistical-analysis.md  07-visualization.md  08-enrichment.md  09-classification.md  10-export.md  11-pitfalls.md  guide.md  tutorial.ipynb
docs/superpowers/plans/: 2026-06-12-rfecv-stability.md
docs/superpowers/specs/: 2026-06-12-rfecv-stability-design.md
proteomics_toolkit/: __init__.py  classification.py  data_import.py  enrichment.py  export.py  marker_discovery.py  multivariate.py  normalization.py  preprocessing.py  statistical_analysis.py  temporal_clustering.py  validation.py  visualization.py
proteomics_toolkit/datasets/: __init__.py  _generate.py  example_metadata.csv  example_peptides.parquet  example_proteins.parquet  example_sequences.json
release-notes/: README.md  RELEASE_NOTES_next.md  RELEASE_NOTES_v26.1.0.md  RELEASE_NOTES_v26.2.0.md  RELEASE_NOTES_v26.2.1.md  RELEASE_NOTES_v26.3.0.md  RELEASE_NOTES_v26.4.0.md  RELEASE_NOTES_v26.4.1.md  RELEASE_NOTES_v26.4.2.md  RELEASE_NOTES_v26.4.3.md  RELEASE_NOTES_v26.5.0.md  RELEASE_NOTES_v26.6.0.md
tests/: conftest.py  test_classification.py  test_data_import.py  test_datasets.py  test_enrichment.py  test_export.py  test_marker_discovery.py  test_multiclass_importance.py  test_multivariate.py  test_normalization.py  test_preprocessing.py  test_statistical_analysis.py  test_temporal_clustering.py  test_validation.py  test_visualization.py  test_visualization_loadings_umap.py
