[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "proteomics-toolkit"
version = "26.1.0"
description = "Proteomics analysis toolkit for mass spectrometry data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Michael MacCoss Lab, University of Washington" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["proteomics", "mass-spectrometry", "DIA", "bioinformatics"]

[project.urls]
Homepage = "https://github.com/uw-maccosslab/proteomics-toolkit"
Repository = "https://github.com/uw-maccosslab/proteomics-toolkit"
Issues = "https://github.com/uw-maccosslab/proteomics-toolkit/issues"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyarrow>=12.0",
    "requests>=2.25",
]

[project.optional-dependencies]
xgboost = ["xgboost>=1.7"]
all = ["xgboost>=1.7"]

[tool.setuptools]
packages = ["proteomics_toolkit"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
